--- a/layouts/partials/page_metadata.html
+++ b/layouts/partials/page_metadata.html
@@ -1,3 +1,35 @@
+<meta name="google-site-verification" content="5-dQVH6MkavuDxgUBshwIH11QdEsZC7lplfX_4BCpiA" />
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Abrhaley Arefaine Hailenchael",
+  "url": "https://abrhaleyarefaine1997.github.io/",
+  "jobTitle": "MSc Computer Science Graduate | Agentic AI Developer / Data Engineer",
+  "affiliation": [
+    {
+      "@type": "CollegeOrUniversity",
+      "name": "Warsaw University of Technology"
+    },
+    {
+      "@type": "CollegeOrUniversity",
+      "name": "Mekelle University"
+    },
+    {
+      "@type": "Organization",
+      "name": "FOREO"
+    }
+  ],
+  "sameAs": [
+    "https://www.linkedin.com/in/abrhaley-arefaine-hailenchael-088bbb229/",
+    "https://github.com/abrhaleyarefaine1997",
+    "https://www.instagram.com/abrhaley_ambassador",
+    "https://www.facebook.com/abrehaley.arefayne",
+    "https://twitter.com/abrhaley_ambassador",
+    "https://abrhaleyarefaine1997.github.io/"
+  ]
+}
+</script>
 
 {{ $is_list := .is_list }}
 {{ $page := .page }}
